--- a/src/compiler_config.json
+++ b/src/compiler_config.json
@@ -2,10 +2,10 @@
 	"language": "Solidity",
 	"settings": {
 		"viaIR": true,
-		"evmVersion": "cancun",
+		"evmVersion": "prague",
 		"optimizer": {
 			"enabled": true,
-			"runs": 100
+			"runs": 10000
 		},
 		"outputSelection": {
 			"*": {
