--- a/foundry.toml
+++ b/foundry.toml
@@ -1,7 +1,7 @@
 [profile.default]
 src = "src"
 out = "out"
-libs = ["lib"]
+libs = ["lib", "dependencies"]
 ffi = true
 optimizer = true
 via-ir = true
@@ -14,3 +14,6 @@ fs_permissions = [{ access = "read-write", path = ".forge-snapshots/"}]
 
 [rpc_endpoints]
 mantal_sepolia = "${MANTLE_SEPOLIA_RPC}"
+
+[dependencies]
+forge-std = "1.10.0"
